1999-12-24  Keiichi Suzuki  <keiichi@nanap.org>

	* apel-ver.el: Fix file header.

1999-12-23  Yuuichi Teranishi  <teranisi@gohome.org>

	* timezone.el (timezone-abs): Eliminated.
	(timezone-zone-to-minute): Use `abs' instead of `timezone-abs'.

	* poe-18.el (current-time-zone): Use `abs'.

1999-12-23  Keiichi Suzuki  <keiichi@nanap.org>

	* product.el: Fix file header. `checkdoc' fix.

	* apel-ver.el: Fix file header.

1999-12-22  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-ELS, EMU-ELS: product.el, apel-ver.el, time-stamp.el,
	and timezone.el are version-dependent.

	* product.el (emacs-major-version, emacs-minor-version): Moved
	from poe.el.

	* poe.el (emacs-major-version, emacs-minor-version): Removed.

	* pym.el: Add product information.

1999-12-22  Yuuichi Teranishi  <teranisi@gohome.org>

	* poe.el (string-to-int): Commented out an alias for
	`string-to-number'.

1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>

	* poe-18.el: Fix open parenthesis.

	* README.ja: Sync up with README.en.

	* README.en: Fix what versions of Emacsen can use
	`normal-top-level-add-to-load-path'.

1999-12-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-MK: Modified comments.

	* poe.el: Modified comments.

	* pym.el: Modified comments.
	(defalias-maybe): Don't update `current-load-list'.

1999-12-06  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* pym.el (subr-fboundp): Reverted; but considered as obsolete.

1999-12-05  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe-18.el (numberp): New function; alias for `integerp'.
	(abs): New function.

	* poe-18.el (byte-code-function-p): Docstring sync.
	(cyclic-function-indirection): New error symbol.
	(indirect-function): New function; use above symbol.

1999-11-30  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe-18.el (current-time-string): New local variable `lyear'
	for leap year; renamed from `uru' and bind locally.

	* poe.el (emacs-major-version, emacs-minor-version): Define