@@ -1,3 +1,7 @@
+1999-12-24  Yuuichi Teranishi  <teranisi@gohome.org>
+
+	* APEL: Version 10.0 released.
+
 1999-12-24  Keiichi Suzuki  <keiichi@nanap.org>
 
 	* apel-ver.el: Fix file header.
